added shooting, enemies, damage, enemy can die and enemy physics

--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -199,6 +199,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "pygame 2.0.1 (SDL 2.0.14, Python 3.9.1)\nHello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
